--- a/admin/index.html
+++ b/admin/index.html
@@ -56,7 +56,7 @@
 <body>
   <div class="container">
     <h1>WellWay Navigator</h1>
-    <p>Ваш проводник к здоровому, осознанному и вдохновляющему пути — шаг за шагом.</p>
+    <p>Admin panel</p>
     <a href="#start" class="btn">Начать путешествие</a>
     <footer>
       © 2025 WellWay Navigator • Путь к балансу начинается здесь 🌿
