--- a/admin/index.html
+++ b/admin/index.html
@@ -1,66 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WellWay Navigator admin panel</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #e0f7fa, #f0f4c3);
-      color: #263238;
-      line-height: 1.6;
-    }
-
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 2rem;
-      text-align: center;
-    }
-
-    h1 {
-      font-size: 2.8rem;
-      margin-bottom: 1rem;
-      color: #00796b;
-    }
-
-    p {
-      font-size: 1.2rem;
-      margin-bottom: 2rem;
-    }
-
-    .btn {
-      display: inline-block;
-      padding: 0.8rem 2rem;
-      background-color: #00796b;
-      color: white;
-      text-decoration: none;
-      border-radius: 50px;
-      font-weight: bold;
-      transition: background 0.3s;
-    }
-
-    .btn:hover {
-      background-color: #004d40;
-    }
-
-    footer {
-      margin-top: 3rem;
-      font-size: 0.9rem;
-      color: #78909c;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <title>WellWay Admin</title>
+  <link rel="stylesheet" href="../assets/style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>WellWay Navigator</h1>
-    <p>Admin panel</p>
-    <a href="#start" class="btn">Начать путешествие</a>
-    <footer>
-      © 2025 WellWay Navigator • Путь к балансу начинается здесь 🌿
-    </footer>
+  <div class="admin-login">
+    <h2>🔐 Административная панель</h2>
+    <form id="login-form">
+      <label>Логин: <strong>admin</strong> (фиксированный)</label><br>
+      <label>Пароль:</label>
+      <input type="password" id="password" placeholder="••••••••" required>
+      <button type="submit" class="btn btn-primary">Войти</button>
+    </form>
+    <p class="hint">Демо-пароль: <code>wellway</code></p>
   </div>
+
+  <script src="../lib/auth.js"></script>
+  <script>
+    document.getElementById('login-form').onsubmit = async (e) => {
+      e.preventDefault();
+      const pwd = document.getElementById('password').value;
+      const success = await auth.login(pwd);
+      if (success) {
+        window.location.href = 'setup-wizard.html';
+      } else {
+        alert('❌ Неверный пароль');
+      }
+    };
+  </script>
 </body>
 </html>
